--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
 mdm-app-event-service (1.0.1-1+1028) v101; urgency=medium
 
+  * Fix: 腾讯应用无法统计时长
+  * Fix: WPS应用统计时长错误
+
+ -- wangweinan <wangweinan@kylinos.cn>  Mon, 15 Mar 2021 15:49:27 +0800
+
+mdm-app-event-service (1.0.1-1+1028) v101; urgency=medium
+
   * com.mdm.app.event dbus service
 
  -- qinxuchu <qinxuchu@kylinos.cn>  Wed, 28 Oct 2020 15:49:27 +0800
