--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdm-app-event-service (1.0.1-2+0402) v101; urgency=medium
+
+  * Fix: 已经不存在的窗口不再发出失去焦点信号
+
+ -- wangweinan <wangweinan@kylinos.cn>  Fri, 02 Apr 2021 15:49:27 +0800
+
 mdm-app-event-service (1.0.1-2+0315) v101; urgency=medium
 
   * Fix: 腾讯应用无法统计时长
