--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdm-app-event-service (1.0.1-2+0524) v101; urgency=medium
+
+  * Fix: 腾讯应用改名当不修改appid导致无法正常关闭应用和记录使用时间
+
+ -- wangweinan <wangweinan@kylinos.cn>  Mon, 24 May 2021 15:49:27 +0800
+
 mdm-app-event-service (1.0.1-2+0413) v101; urgency=medium
 
   * Fix: 增加关闭腾讯应用的功能
